k8s/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: default
  labels:
    app: jenkins
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
    nodePort: 30080
  - port: 50000
    targetPort: 50000
    protocol: TCP
    name: jnlp
  selector:
    app: jenkins
